@@ -1,37 +1,0 @@
-package WWW::UTWalker;
-use 5.008001;
-use strict;
-use warnings;
-
-use version 0.77; our $VERSION = version->declare("v0.0.1");
-
-1;
-__END__
-
-=encoding utf-8
-
-=head1 NAME
-
-WWW::UTWalker - It's new $module
-
-=head1 SYNOPSIS
-
-    use WWW::UTWalker;
-
-=head1 DESCRIPTION
-
-WWW::UTWalker is ...
-
-=head1 LICENSE
-
-Copyright (C) TakeAsh.
-
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself.
-
-=head1 AUTHOR
-
-L<TakeAsh68k|https://github.com/TakeAsh/>
-
-=cut
-
