@@ -1,4 +1,4 @@
-name = "WWW-UTWalker"
+name = "WWW-YTWalker"
 badges = ["github-actions/test.yml"]
 module_maker="ModuleBuildTiny"
 static_install = "auto"
